Fixed alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,8 +6,7 @@ body{
 .main-display{
   background: url('http://placehold.it/1600x640&text=X.');
   /*background: url('../img/marimba_full.jpg');*/
-  background-size: contain;
-  background-repeat: no-repeat;
+  background-size: cover;
   height: 40vw;
   position: relative;
 }
